# nametable

./: .gitignore  index.html  objects.inv  pyproject.toml  searchindex.js
.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  index.doctree  license.doctree  modules.doctree  nametable.doctree
.github/: CONTRIBUTING.rst  FUNDING.yml
.github/workflows/: github_pages.yml  publish.yml  tests.yml
_sources/: index.rst.txt  license.rst.txt
changelog/: index.html
contributing/: index.html
docs/source/: conf.py  index.rst  nametable.rst
genindex/: index.html
license/: index.html
modules/: index.html
nametable/: Animator.py  Block.py  Pattern.py  PatternAnimated.py  PatternAnimator.py  PatternMeta.py  PatternStack.py  PatternTable.py  PatternTableAnimated.py  Tile.py  __init__.py  index.html
public/: .buildinfo  index.html
public/.doctrees/: environment.pickle  index.doctree  modules.doctree  nametable.doctree
public/_sources/: modules.rst.txt
public/genindex/: index.html
public/modules/: index.html
public/py-modindex/: index.html
py-modindex/: index.html
search/: index.html
tests/: conftest.py  test_block.py  test_nametable  test_pattern.py  test_pattern_animator.py  test_pattern_meta.py  test_pattern_stack.py  test_pattern_table.py  test_pattern_table_animated.py  test_tile.py
